env/Development/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone-frontend-deployment
  labels:
    app: capstone-frontend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capstone-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: capstone-frontend
    spec:
      containers:
      - image: 085519708244.dkr.ecr.us-east-2.amazonaws.com/frontend_service:v0.1.0
        imagePullPolicy: Always
        name: capstone-frontend
        ports:
        - containerPort: 80
          #hostPort: 80
          protocol: TCP
