env/Development/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capstone-frontend-test
  #service.beta.kubernetes.io/aws-load-balancer-name: k8s-default-capstone-b08b3d1a10
spec:
  selector:
    app: capstone-frontend-test
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      #targetPort: 80
